WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85956
[EFL] EFL's DRT does not print didFailProvisionalLoadWithError messages
https://bugs.webkit.org/show_bug.cgi?id=85956
Summary
[EFL] EFL's DRT does not print didFailProvisionalLoadWithError messages
Chris Dumez
Reported
2012-05-08 22:55:32 PDT
EFL's DRT does not print didFailProvisionalLoadWithError messages. This causes the following test to fail: http/tests/loading/pdf-commit-load-callbacks.html
Attachments
Patch
(15.24 KB, patch)
2012-05-09 01:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.79 KB, patch)
2012-05-09 01:56 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(16.87 KB, patch)
2012-05-10 00:26 PDT
,
Chris Dumez
gustavo
: review+
gustavo
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(17.12 KB, patch)
2012-05-22 23:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-09 01:04:34 PDT
Created
attachment 140879
[details]
Patch
Gyuyoung Kim
Comment 2
2012-05-09 01:12:57 PDT
Comment on
attachment 140879
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140879&action=review
> Source/WebKit/efl/ewk/ewk_view.cpp:2970 > + evas_object_smart_callback_call(ewkView, "load,provisional,failed", (void*)error);
It looks you are missing to write this signal description in ewk_view.h.
Chris Dumez
Comment 3
2012-05-09 01:56:28 PDT
Created
attachment 140887
[details]
Patch Take feedback into consideration.
Raphael Kubo da Costa (:rakuco)
Comment 4
2012-05-09 18:49:34 PDT
Comment on
attachment 140887
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140887&action=review
Do you have any idea why the expectation varies for the PDF test across ports? Shouldn't our version match GTK's?
> Source/WebKit/efl/ewk/ewk_frame.cpp:1380 > + evas_object_smart_callback_call(ewkFrame, "load,provisional,failed", (void*)error);
Please don't use C-style casts.
> Source/WebKit/efl/ewk/ewk_view.cpp:2970 > + evas_object_smart_callback_call(ewkView, "load,provisional,failed", (void*)error);
Ditto.
Chris Dumez
Comment 5
2012-05-10 00:00:23 PDT
Here is the diff between our expectations and GTK's: --- LayoutTests/platform/efl/http/tests/loading/pdf-commit-load-callbacks-expected.txt 2012-05-10 09:55:07.259467379 +0300 +++ LayoutTests/platform/gtk/http/tests/loading/pdf-commit-load-callbacks-expected.txt 2012-05-09 11:14:37.317981072 +0300 @@ -3,6 +3,5 @@ frame "<!--framePath //<!--frame0-->-->" - didStartProvisionalLoadForFrame main frame - didFinishDocumentLoadForFrame main frame - didHandleOnloadEventsForFrame -frame "<!--framePath //<!--frame0-->-->" - didFailProvisionalLoadWithError main frame - didFinishLoadForFrame Basically, the GTK port does not print out "didFailProvisionalLoadWithError" messages yet. For this reason, we are using the same expectations as Qt, which has support for "didFailProvisionalLoadWithError" messages. I'll reupload a patch with the casting issues fixed.
Chris Dumez
Comment 6
2012-05-10 00:26:46 PDT
Created
attachment 141097
[details]
Patch Removed C-style casts.
Raphael Kubo da Costa (:rakuco)
Comment 7
2012-05-10 07:10:04 PDT
Comment on
attachment 141097
[details]
Patch Looks OK.
Chris Dumez
Comment 8
2012-05-10 08:27:36 PDT
For reference, the platform-specific expected results were introduced by:
https://bugs.webkit.org/show_bug.cgi?id=85275
Gustavo Noronha (kov)
Comment 9
2012-05-22 07:58:06 PDT
Comment on
attachment 141097
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=141097&action=review
cq- because of the nit
> Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp:583 > + // signals. m_provisionalLoadFailedFrame is used to avoid printing twice the load error in
Adding a colon after 'error' here would make this clearer I believe.
Chris Dumez
Comment 10
2012-05-22 23:04:24 PDT
Created
attachment 143466
[details]
Patch for landing
WebKit Review Bot
Comment 11
2012-05-23 00:42:19 PDT
Comment on
attachment 143466
[details]
Patch for landing Clearing flags on attachment: 143466 Committed
r118142
: <
http://trac.webkit.org/changeset/118142
>
WebKit Review Bot
Comment 12
2012-05-23 00:42:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug