[EFL] EFL's DRT does not print didFailProvisionalLoadWithError messages https://bugs.webkit.org/show_bug.cgi?id=85956

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-23
Reviewed by Gustavo Noronha Silva.

Source/WebKit/efl:

Add new "load,provisional,failed" signal on the frame and the view to
complement the "load,provisional" one.

* WebCoreSupport/FrameLoaderClientEfl.cpp:
(WebCore::FrameLoaderClientEfl::dispatchDidFailProvisionalLoad):
* ewk/ewk_frame.cpp:
(ewk_frame_load_provisional_failed):
* ewk/ewk_frame.h:
* ewk/ewk_frame_private.h:
* ewk/ewk_view.cpp:
(ewk_view_load_provisional_failed):
* ewk/ewk_view.h:
* ewk/ewk_view_private.h:

Tools:

Catch new "load,provisional,failed" signal and print
didFailProvisionalLoadWithError messages when LayoutTestController's
dumpFrameLoadCallbacks() returns true. Also make sure the
didFailLoadWithError message is not printed in case of provisional
load failure.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::createView):
(DumpRenderTreeChrome::onFrameCreated):
(DumpRenderTreeChrome::onFrameProvisionalLoadFailed):
(DumpRenderTreeChrome::onFrameLoadError):
* DumpRenderTree/efl/DumpRenderTreeChrome.h:
(DumpRenderTreeChrome):

LayoutTests:

Unskip test cases which expect the DumpRenderTree to print
didFailProvisionalLoadWithError messages.
Add EFL expectation for
http/tests/loading/pdf-commit-load-callbacks.html.

* platform/efl/Skipped:
* platform/efl/http/tests/loading/pdf-commit-load-callbacks-expected.txt: Added.
Use same expectation as for Qt.
* platform/efl/test_expectations.txt:

Canonical link: https://commits.webkit.org/104954@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118142 268f45cc-cd09-0410-ab3c-d52691b4dbfc